Fixed a z-index menu bug

--- a/assets/sass/navigation/_menus.scss
+++ b/assets/sass/navigation/_menus.scss
@@ -8,6 +8,7 @@
 	padding: 1em;
 	bottom: 0;
 	background-color: $color__primary;
+	z-index: 100;
 
 	ul {
 		// display: none;
